fix(menu-width): hide overflow

--- a/src/scripts/components/main/overlay/overlay.styl
+++ b/src/scripts/components/main/overlay/overlay.styl
@@ -8,6 +8,7 @@
   display: flex
   justify-content: center
   align-items: center
+  overflow: hidden
   width: 100%
   height: 100%
   background-color: rgba($black, 0.9)
